# herdr-jira

./: Cargo.toml  README.md  config.example.toml  herdr-plugin.toml
scripts/: build.sh  open-jira-tab.sh  open-jira.sh
src/: app.rs  config.rs  herdr.rs  jira.rs  main.rs  ui.rs
