[package]
name = "herdr-jira"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Jira TUI plugin for herdr: filters, search, status transitions, delegate issues to agents"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ureq = { version = "2.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"

[profile.release]
strip = true
lto = true
